<resources>
    <string name="app_name">Pyay History Guide</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="content">Android Development is Great.</string>
    <string name="title">Android Dev</string>
    <string name="btn_like">Like</string>
    <string name="date">Date</string>
    <string name="see_more">see more</string>
</resources>
