<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/article_ripple"
        android:clickable="true"
        android:orientation="vertical"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivo_black"
                android:gravity="left|center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingTop="10dp"

                android:text="@string/title"
                android:textSize="20sp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_share"/>
            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/date"
                android:layout_below="@id/tvTitle"
                android:textSize="13sp" />
        </RelativeLayout>



        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:paddingTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLines="6"
            android:paddingBottom="5dp"
            android:text="@string/content"
            android:textSize="17sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:paddingLeft="10dp"
            android:textStyle="italic"
            android:visibility="gone"
            android:text=". . . . ."/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLike"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/article_ripple"
                android:fontFamily="@font/roboto"
                android:text="@string/btn_like" />

            <Button
                android:id="@+id/btnSeeMore"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/article_ripple"
                android:layout_margin="0dp"
                android:paddingBottom="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/see_more" />
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>